--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thompson & Thompson Consulting</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.21/vanta.dots.min.js"></script>
+    <script src="C:\Users\offic\OneDrive\Desktop\ttconsulting\ttconsulting\assets\js\three.min.js"></script>
+    <script src="C:\Users\offic\OneDrive\Desktop\ttconsulting\ttconsulting\assets\js\vanta.dots.min.js"></script>
     <style>
         body {
             margin: 0;
