--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f9f9f9;
-            color: #444;
+            font-family: 'Courier New', Courier, monospace;
+            background: #000000;
+            color: #ffffff;
             text-align: center;
             overflow: hidden;
         }
@@ -80,10 +80,10 @@
     <!-- Main Content -->
     <div class="container">
         <h1>Thompson & Thompson Consulting</h1>
-        <p>Strategic Solutions for Businesses & Startups</p>
+        <p></p>
         <div class="button-container">
-            <button class="btn btn-primary">Get Started</button>
-            <button class="btn btn-secondary">Learn More</button>
+            <button class="btn btn-primary">Create The Future</button>
+            <button class="btn btn-secondary">Who We Are</button>
         </div>
     </div>
 
@@ -93,9 +93,9 @@
             if (typeof VANTA !== "undefined") {
                 VANTA.DOTS({
                     el: "#vanta-bg",
-                    color: 0xa00,
-                    backgroundColor: 0xf9f9f9,
-                    spacing: 20
+                    color: 0xffffff,
+                    backgroundColor: 0x000000,
+                    spacing: 50
                 });
             } else {
                 console.error("Vanta.js failed to load.");
