--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             margin: 0;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             background: #000000;
             color: #ffffff;
             text-align: center;
@@ -93,9 +93,9 @@
             if (typeof VANTA !== "undefined") {
                 VANTA.DOTS({
                     el: "#vanta-bg",
-                    color: 0xffffff,
-                    backgroundColor: 0x000000,
-                    spacing: 50
+                    color: 0x000000,
+                    backgroundColor: 0xffffff,
+                    spacing: 35
                 });
             } else {
                 console.error("Vanta.js failed to load.");
