--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin: 0;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             background: #000000;
-            color: #ffffff;
+            color: #000000;
             text-align: center;
             overflow: hidden;
         }
