--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <style>
         body {
             margin: 0;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            background: #000000;
+            font-family: 'Impact', 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
+            background: #ffffff;
             color: #000000;
             text-align: center;
             overflow: hidden;
