--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
 
         .btn-primary {
-            background-color: #a00;
+            background-color: hwb(215 6% 65%);
             color: white;
         }
 
