--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thompson & Thompson Consulting</title>
 
-    <!-- Load necessary scripts -->
+    <!-- Load necessary scripts (Updated paths) -->
     <script src="assets/js/three.min.js"></script>
     <script src="assets/js/vanta.dots.min.js"></script>
 
@@ -40,31 +40,23 @@
             z-index: 1;
         }
 
-        /* Move title to the top */
-        .title {
-            position: absolute;
-            top: 10vh;
+        h1 {
             font-size: 3rem;
-            font-weight: bold;
+            font-weight: 300;
         }
 
-        /* Center the "Create the Future" button */
-        .center-button {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+        p {
+            font-size: 1.2rem;
+            color: #666;
         }
 
-        /* Position "Who We Are" button at the top-right */
-        .top-right-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
+        .button-container {
+            margin-top: 20px;
         }
 
         .btn {
             padding: 10px 20px;
+            margin: 10px;
             font-size: 1rem;
             border: none;
             cursor: pointer;
@@ -72,7 +64,7 @@
         }
 
         .btn-primary {
-            background-color: #001f3f; /* Navy Blue */
+            background-color: hwb(215 6% 65%);
             color: white;
         }
 
@@ -85,22 +77,24 @@
     <!-- Background Animation -->
     <div id="vanta-bg"></div>
 
-    <!-- Title -->
-    <h1 class="title">Thompson & Thompson Consulting</h1>
-
     <!-- Main Content -->
-    <button class="btn btn-primary center-button">Create The Future</button>
-    <button class="btn btn-secondary top-right-button">Who We Are</button>
+    <div class="container">
+        <h1>Thompson & Thompson Consulting</h1>
+        <p></p>
+        <div class="button-container">
+            <button class="btn btn-primary">Create The Future</button>
+            <button class="btn btn-secondary">Who We Are</button>
+        </div>
+    </div>
 
-    <!-- Initialize Vanta.js -->
+    <!-- Initialize Vanta.js with improvements -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             if (typeof VANTA !== "undefined") {
                 VANTA.DOTS({
                     el: "#vanta-bg",
-                    color: 0x000000,  // Black dots
-                    color2: 0x000000, // Black lines
-                    backgroundColor: 0xffffff, // White background
+                    color: 0x000000,
+                    backgroundColor: 0xffffff,
                     spacing: 10
                 });
             } else {
