--- a/index.html
+++ b/index.html
@@ -28,26 +28,25 @@
             z-index: -1;
         }
 
-        /* Header Styling */
+        /* Title Centered */
         .header {
             position: absolute;
             top: 20px;
-            left: 20px;
+            left: 50%;
+            transform: translateX(-50%);
             font-size: 2rem;
             font-weight: bold;
+            text-align: center;
         }
 
-        /* Button: Who We Are */
+        /* Who We Are (Just Underlined Text) */
         .who-we-are {
             position: absolute;
             top: 20px;
             right: 20px;
-            background-color: #ddd;
-            padding: 10px 15px;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
             font-size: 1rem;
+            text-decoration: underline;
+            cursor: pointer;
         }
 
         /* Centered content */
@@ -59,12 +58,12 @@
             text-align: center;
         }
 
-        /* Create the Future button */
+        /* Bigger "Create The Future" Button */
         .btn-primary {
             background-color: #1E3A8A;
             color: white;
-            padding: 12px 20px;
-            font-size: 1rem;
+            padding: 16px 24px; /* Increased padding */
+            font-size: 1.2rem; /* Increased font size */
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -77,11 +76,11 @@
     <!-- Background Animation -->
     <div id="vanta-bg"></div>
 
-    <!-- Header -->
+    <!-- Header (Centered Title) -->
     <div class="header">Thompson & Thompson Consulting</div>
 
-    <!-- "Who We Are" Button -->
-    <button class="who-we-are">Who We Are</button>
+    <!-- "Who We Are" (Underlined Text) -->
+    <div class="who-we-are">Who We Are</div>
 
     <!-- Center Content -->
     <div class="center-container">
