--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
         /* Bigger "Create The Future" Button */
         .btn-primary {
-            background-color: #1E3A8A;
+            background-color: hsl(0, 0%, 0%);
             color: white;
-            padding: 16px 24px; /* Increased padding */
-            font-size: 1.2rem; /* Increased font size */
+            padding: 24px 32px; /* Increased padding */
+            font-size: 2.4rem; /* Increased font size */
             border: none;
             border-radius: 5px;
             cursor: pointer;
