--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         /* Bigger "Create The Future" Button */
         .btn-primary {
             background-color: hsl(0, 0%, 0%);
-            color: white;
+            color: #000000;
             padding: 24px 32px; /* Increased padding */
             font-size: 2.4rem; /* Increased font size */
             border: none;
