--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         /* Bigger "Create The Future" Button */
         .btn-primary {
-            background-color: hsl(0, 0%, 0%);
+            background-color: hwb(0 100% 0%);
             color: #000000;
             padding: 24px 32px; /* Increased padding */
             font-size: 2.4rem; /* Increased font size */
