--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thompson & Thompson Consulting</title>
+    <title></title>
 
     <!-- Load necessary scripts -->
     <script src="assets/js/three.min.js"></script>
@@ -80,7 +80,7 @@
     <div class="header">Thompson & Thompson Consulting</div>
 
     <!-- "Who We Are" (Underlined Text) -->
-    <div class="who-we-are">Who We Are</div>
+    <div class="who-we-are"></div>
 
     <!-- Center Content -->
     <div class="center-container">
