--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
             background: #ffffff;
-            color: #000000;
+            color: hsl(225, 5%, 66%);
             overflow: hidden;
         }
 
@@ -31,10 +31,10 @@
         /* Title Centered */
         .header {
             position: absolute;
-            top: 20px;
+            top: 14px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 2rem;
+            font-size: 8rem;
             font-weight: bold;
             text-align: center;
         }
@@ -60,8 +60,8 @@
 
         /* Bigger "Create The Future" Button */
         .btn-primary {
-            background-color: hwb(0 100% 0%);
-            color: #000000;
+            background-color: rgb(0, 0, 0);
+            color: hsl(0, 0%, 100%);
             padding: 24px 32px; /* Increased padding */
             font-size: 2.4rem; /* Increased font size */
             border: none;
