--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
             background: #ffffff;
-            color: hsl(225, 5%, 66%);
+            color: #302c2c81;
             overflow: hidden;
         }
 
@@ -31,7 +31,7 @@
         /* Title Centered */
         .header {
             position: absolute;
-            top: 14px;
+            top: 30px;
             left: 50%;
             transform: translateX(-50%);
             font-size: 4rem;
@@ -95,8 +95,8 @@
                     el: "#vanta-bg",
                     color: 0x000000,  // Color of dots
                     backgroundColor: 0xffffff, // Background color
-                    spacing: 20,  // Adjust spacing
-                    size: 3        // Adjust dot size
+                    spacing: 25,  // Adjust spacing
+                    size: 4        // Adjust dot size
                 });
             } else {
                 console.error("Vanta.js failed to load.");
