--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background: #ffffff;
             color: #302c2c81;
             overflow: hidden;
@@ -31,7 +31,7 @@
         /* Title Centered */
         .header {
             position: absolute;
-            top: 30px;
+            top: 200px;
             left: 50%;
             transform: translateX(-50%);
             font-size: 4rem;
