--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin: 0;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background: #ffffff;
-            color: #302c2c81;
+            color: #020202;
             overflow: hidden;
         }
 
@@ -31,7 +31,7 @@
         /* Title Centered */
         .header {
             position: absolute;
-            top: 0px;
+            top: 50px;
             left: 20%;
             transform: translateX(-50%);
             font-size: 1rem;
@@ -80,7 +80,7 @@
     <div class="header">Thompson & Thompson Consulting</div>
 
     <!-- "Who We Are" (Underlined Text) -->
-    <div class="who-we-are"></div>
+    <div class="who-we-are">Who we are</div>
 
     <!-- Center Content -->
     <div class="center-container">
