--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Thompson & Thompson Consulting</title>
 
     <!-- Load necessary scripts -->
     <script src="assets/js/three.min.js"></script>
@@ -28,15 +28,17 @@
             z-index: -1;
         }
 
-        /* Title Centered */
+        /* Logo as Header */
         .header {
             position: absolute;
-            top: 50px;
-            left: 20%;
-            transform: translateX(-50%);
-            font-size: 1rem;
-            font-weight: bold;
-            text-align: center;
+            top: 20px;
+            left: 20px;
+            width: 200px; /* Adjust width of logo */
+        }
+
+        .header img {
+            width: 100%;
+            height: auto;
         }
 
         /* Who We Are (Just Underlined Text) */
@@ -58,7 +60,7 @@
             text-align: center;
         }
 
-        /* Bigger "Create The Future" Button */
+        /* Bigger "Invent Now" Button */
         .btn-primary {
             background-color: rgb(0, 0, 0);
             color: hsl(0, 0%, 100%);
@@ -76,15 +78,17 @@
     <!-- Background Animation -->
     <div id="vanta-bg"></div>
 
-    <!-- Header (Centered Title) -->
-    <div class="header">Thompson & Thompson Consulting</div>
+    <!-- Logo as Header -->
+    <div class="header">
+        <img src="assets/images/logo.png" alt="Thompson & Thompson Consulting Logo">
+    </div>
 
     <!-- "Who We Are" (Underlined Text) -->
     <div class="who-we-are">Who we are</div>
 
     <!-- Center Content -->
     <div class="center-container">
-        <button class="btn-primary">Create The Future</button>
+        <button class="btn-primary">Invent Now</button>
     </div>
 
     <!-- Initialize Vanta.js -->
