--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Center Content -->
     <div class="center-container">
-        <button class="btn-primary">Invent Now</button>
+        <button class="btn-primary">Services</button>
     </div>
 
     <!-- Initialize Vanta.js -->
