--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         <img src="assets/images/logo.png" alt="Thompson & Thompson Consulting Logo">
     </div>
 
-    <!-- "Who We Are" (Underlined Text) -->
-    <div class="who-we-are">Who we are</div>
+    <!-- "Who We Are" (Underlined Text) 
+    <div class="who-we-are">Who we are</div>-->
 
-    <!-- Center Content -->
+    <!-- Center Content 
     <div class="center-container">
         <button class="btn-primary">Services</button>
-    </div>
+    </div> -->
 
     <!-- Initialize Vanta.js -->
     <script>
