--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <link rel="apple-touch-icon" href="/Static/images/icons/apple-touch-icon-180x180-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="/Static/images/icons/apple-touch-icon-180x180-precomposed.png">
 
-    <link rel="stylesheet" href="/static/bain.com/v-638735915760000000/css/style.css" media="all">
+    <link rel="stylesheet" href="ttconsulting\styles.css" media="all">
     <style>
         #consent_blackbar {
             z-index: 99;
